--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,12 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "plugins": [{
       "name": "next"
     }],
     "paths": {
-      "@/*": ["./src/*"],
+      "*": ["*", "src/*"]
       "@splidejs/react-splide": ["src/react-splide.d.ts"]
     }
   },
