--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,13 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "plugins": [{
       "name": "next"
     }],
     "paths": {
-      "@/*": ["./*"],
-      "@splidejs/react-splide": ["./react-splide.d.ts"]
+      "@/*": ["./src/*"],
+      "@splidejs/react-splide": ["src/react-splide.d.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
